[project]
name = "pysacs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "icecream>=2.1.10",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
